# hogyoku

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SETUP_REQUIRED.md  docker-compose.yml  flake.nix  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
ansible/: .ansible-lint  ansible.cfg  inventory.example.ini
ansible/group_vars/: all.example.yml
ansible/playbooks/: deploy-compose.yml  harden.yml
docs/: DEVOPS.md  SECURITY.md
evaluations/: answers.example.jsonl  chunks.example.jsonl  example.jsonl  rag_answers.example.jsonl  sample_document.txt
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
public/: app.js  index.html  styles.css
python/hogyoku_guardrails/: __init__.py  chunk_audit.py  citation_audit.py  common.py  rag_lint.py  security_report.py  security_scan.py
scripts/: bootstrap.sh  deploy.sh  evaluate_retrieval.py  run_guardrails.py  verify.sh
services/docproc/: Cargo.toml  Dockerfile
services/docproc/src/: main.rs
src/: app.ts  config.ts  server.ts  worker.ts
src/db/: client.ts  migrate.ts
src/db/migrations/: 001_initial.sql
src/http/: auth.ts  documents.ts  threads.ts
src/lib/: chunking.ts  passwords.ts  queue.ts  sessions.ts  storage.ts
src/services/: ai.ts  answers.ts  extraction.ts  ingestion.ts  retrieval.ts
src/types/: fastify.d.ts
tests/: chunking.test.ts  env-safety.test.ts  passwords.test.ts
