[package]
name = "hogyoku-docproc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic document chunking utility for Hogyoku ingestion pipelines."

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
